# ComfyUI-OmDet

./: README.md  __init__.py  node.py  pyproject.toml  requirements.txt
omdet/infernece/: base_engine.py  det_engine.py
omdet/modeling/language_backbone/: backbone.py
readme/: README.zh_CN.md
